[tool.poetry]
name = "licenseman"
version = "0.1.0"
description = ""
authors = ["teaishealthy <teaishealthy@protonmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
terminaltables = "^3.1.10"

[tool.poetry.dev-dependencies]
black = "^22.10.0"
isort = "^5.10.1"

[tool.poetry.scripts]
licenseman = "licenseman:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
